--- a/001_MMQ.ipynb
+++ b/001_MMQ.ipynb
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "af97c7ed",
    "metadata": {},
    "outputs": [],
@@ -479,15 +479,14 @@
     "    \"\"\"\n",
     "    Função para calcular a solução inversa generalizada.\n",
     "    \n",
+    "    d = Gw\n",
+    "    \n",
     "    Parâmetros:\n",
-    "    G : numpy.ndarray\n",
-    "        Matriz de design (dados).\n",
-    "    d : numpy.ndarray\n",
-    "        Vetor de dados observados.\n",
+    "    G : Matriz de design (dados).\n",
+    "    d : Vetor de dados observados.\n",
     "        \n",
     "    Retorna:\n",
-    "    w : numpy.ndarray\n",
-    "        Parâmetros do modelo estimados.\n",
+    "    w : Parâmetros do modelo estimados.\n",
     "    \"\"\"\n",
     "    # Calculando a solução inversa generalizada\n",
     "    w = np.linalg.inv(G.T @ G) @ G.T @ d\n",
@@ -515,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "879c39fb",
    "metadata": {},
    "outputs": [],
@@ -526,14 +525,11 @@
     "    Função para estimar a aproximação de do vetor de dados d\n",
     "    \n",
     "    Parâmetros:\n",
-    "    G : numpy.ndarray\n",
-    "        Matriz de design (dados).\n",
-    "    w : numpy.ndarray\n",
-    "        Parâmetros do modelo.\n",
+    "    G : Matriz de design (dados).\n",
+    "    w : Parâmetros do modelo.\n",
     "        \n",
     "    Retorna:\n",
-    "    d_calc : numpy.ndarray\n",
-    "        Dados previstos.\n",
+    "    d_calc : Dado calculado.\n",
     "    \"\"\"\n",
     "    d_calc = np.matmul(G,w)\n",
     "    return d_calc"
@@ -1584,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "ed5d86ec",
    "metadata": {},
    "outputs": [],
@@ -1599,8 +1595,7 @@
     "    lambda_reg : Termo de regularização.\n",
     "        \n",
     "    Retorna:\n",
-    "    w : numpy.ndarray\n",
-    "        Parâmetros do modelo estimados.\n",
+    "    w : Parâmetros do modelo estimados.\n",
     "    \"\"\"\n",
     "    # Calculando a solução inversa generalizada com regularização\n",
     "    w = np.matmul(np.matmul(np.linalg.inv(np.matmul(G.T,G) + lambda_reg**2 * np.eye(G.shape[1])),G.T),d)\n",
